--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_api_headers: ^1.1.1
   tuple: ^2.0.0-nullsafety.0
   http: ^0.13.4
+  collection: ^1.15.0
 
 dev_dependencies:
   flutter_test:
